#86 Fixing the gaps and changing text.

--- a/frontend/src/app/(home)/_skills/styles.module.scss
+++ b/frontend/src/app/(home)/_skills/styles.module.scss
@@ -2,6 +2,9 @@
 
 .text {
   margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 
   a {
     color: $color-accent;
