--- a/frontend/src/styles/global.module.scss
+++ b/frontend/src/styles/global.module.scss
@@ -36,9 +36,6 @@
   font-size: clamp(1.1rem, 1vw, 1.3rem);
   line-height: 1.5;
   font-weight: 300;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
 }
 
 .tags {
